--- a/masterapp/templates/masterapp/layout.html
+++ b/masterapp/templates/masterapp/layout.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
+    <style type="text/css">
+    *
+    {
+        margin: 0px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+    header{
+        height: 100px;
+        background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(29,90,253,0.6138830532212884) 20%, rgba(252,176,69,1) 100%);
+    }
+    header ul li
+    {
+        display: inline-block;
+        margin-left: 20px;;
+    }
+    header ul li a
+    {
+        color:white;
+        font-size: 24px;
+    }
+    section
+    {
+        height: 400px;
+        background-color:gray;
+    }
+    footer{
+        height: 200px;
+        background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(29,90,253,0.6138830532212884) 20%, rgba(252,176,69,1) 100%);
+    }
+
+   </style>
 </head>
 <body>
     <header>
